uncomment debugged lines